--- a/ZombieGuide/Views/Shared/_Layout.cshtml
+++ b/ZombieGuide/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html ng-app="zombie-guide">
+<html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
