--- a/ZombieGuide/Views/Zombie/Detail.cshtml
+++ b/ZombieGuide/Views/Zombie/Detail.cshtml
@@ -3,25 +3,25 @@
         <form role="form" name="details">
             <div class="form-group">
                 <label>Name</label>
-                <input ng-model="ctrl.zombie.name" type="text" class="form-control" placeholder="Zombie Name" required>
+                <input type="text" class="form-control" placeholder="Zombie Name" required>
             </div>
             <div class="form-group">
                 <label>Image</label>
-                <select class="form-control" ng-model="ctrl.zombie.imageName" ng-options="name for name in ctrl.imageNames">
+                <select class="form-control">
                     <option value="">-- choose image --</option>
                 </select>
             </div>
             <div class="form-group">
                 <label>Notes</label>
-                <textarea ng-model="ctrl.zombie.notes" class="form-control" rows="5">
+                <textarea class="form-control" rows="5">
                 </textarea>
             </div>
-            <button type="submit" class="btn btn-lg btn-block btn-default" ng-click="ctrl.save()" ng-disabled="!details.$valid">Save</button>
+            <button type="submit" class="btn btn-lg btn-block btn-default">Save</button>
         </form>
     </div>
     <div class="col-md-6">
         <div class="thumbnail">
-            <img ng-src="/content/zombies/{{ctrl.zombie.imageName || 'generic-zombie.jpg'}}">
+            <img src="/content/zombies/generic-zombie.jpg">
         </div>
     </div>
 </div>
