Simple jQuery based API access

--- a/ZombieGuide/Views/Home/Index.cshtml
+++ b/ZombieGuide/Views/Home/Index.cshtml
@@ -13,3 +13,22 @@
         <p><a class="btn btn-default" href="#/zombies/add">Learn more &raquo;</a></p>
     </div>
 </div>
+@section scripts{
+    <script type="text/javascript">
+        $.ajax('/api/zombies', {
+            type: 'GET'
+        }).success(function (data) {
+            alert(JSON.stringify(data, null, '\t'));
+        });
+
+        //$.ajax('/api/zombies', {
+        //    type: 'POST',
+        //    data: {
+        //        name: 'Josh is dead',
+        //        notes: 'Please put him out of his misery'
+        //    }
+        //}).success(function (data) {
+        //    alert(JSON.stringify(data, null, '\t'));
+        //});
+    </script>
+}
