--- a/ZombieGuide/Views/Shared/_Layout.cshtml
+++ b/ZombieGuide/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="zombie-guide">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -20,7 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#/zombies">List Zombies</a></li>
+                    <li><a href="/zombie/list">List Zombies</a></li>
                     <li><a href="#/zombies/add">Add A Zombie</a></li>
                 </ul>
             </div>
