Full SPA wireup

--- a/ZombieGuide/Views/Home/Index.cshtml
+++ b/ZombieGuide/Views/Home/Index.cshtml
@@ -1,18 +1,1 @@
-﻿<div class="jumbotron landing-page">
-    <h1><small>The</small> Zombie Guide</h1>
-</div>
-<div class="row">
-    <div class="col-md-6">
-        <h2>See The Zombies</h2>
-        <p>View and manage the list of zombies so you can know what to expect should the apocalypse happen.</p>
-        <p><a class="btn btn-default" href="#/zombies">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-6">
-        <h2>Add A New Zombie</h2>
-        <p>Help others prepare by adding your knowledge of zombies to the list.</p>
-        <p><a class="btn btn-default" href="#/zombies/add">Learn more &raquo;</a></p>
-    </div>
-</div>
-@section scripts{
-    <script src="~/Scripts/app/services/zombiesService.js"></script>
-}
+﻿<div ng-view></div>
