--- a/ZombieGuide/Views/Shared/_Layout.cshtml
+++ b/ZombieGuide/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/zombie/list">List Zombies</a></li>
-                    <li><a href="/zombie/detail">Add A Zombie</a></li>
+                    <li><a href="#/zombies">List Zombies</a></li>
+                    <li><a href="#/zombies/add">Add A Zombie</a></li>
                 </ul>
             </div>
         </div>
