--- a/ZombieGuide/Views/Zombie/List.cshtml
+++ b/ZombieGuide/Views/Zombie/List.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="row" ng-controller="ZombieListController as ctrl">
+﻿<div class="row">
     <div class="col-sm-6 animate-if" ng-if="ctrl.zombies.length === 0">
         <h1>No Zombies In Your List!</h1>
     </div>
