--- a/ZombieGuide/Views/Zombie/Detail.cshtml
+++ b/ZombieGuide/Views/Zombie/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="row" ng-controller="ZombieDetailController as ctrl">
+﻿<div class="row">
     <div class="col-md-6">
         <form role="form" name="details">
             <div class="form-group">
